# personal-attention-manager

./: .gitignore  README.md  pyproject.toml
.data/: waiting-state-snapshot.json
data/: waiting_obligation_dataset_v0.json  waiting_obligation_dataset_v0.jsonl
scripts/: print_waiting_failures.py
src/personal_attention_manager/: config.py
src/personal_attention_manager/agent/: models.py
src/personal_attention_manager/agents/classification/core/: agent.py  schemas.py
src/personal_attention_manager/agents/classification/eval/: approved_seed_examples.jsonl  approved_seed_examples_v2.jsonl  dataset_instructions_v3.txt  evaluate.py  generate.py  generated_chat_type_examples.jsonl  generated_chat_type_examples_v0.jsonl
src/personal_attention_manager/agents/react_booking/core/: dataset_models.py  examples_dataset.py  grading.py  report.py  schemas.py
src/personal_attention_manager/agents/shared/: eval.py  formatting.py  generate.py  io.py  schemas.py
src/personal_attention_manager/agents/situation/core/: agent.py  schemas.py
src/personal_attention_manager/agents/situation/eval/: approved_seed_examples.jsonl  dataset_instructions_v1.txt  evaluate.py  generate.py  (+1 more)
src/personal_attention_manager/api/: main.py  scheduler.py  security.py  webhook_handler.py
src/personal_attention_manager/core/: domain.py  models.py
src/personal_attention_manager/integrations/: green_api.py
src/personal_attention_manager/state/: snapshot.py  waiting_state.py
tests/: test_domain.py  test_main.py  test_snapshot.py  test_waiting_state.py  test_webhook_handler.py
