[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-attention-manager"
version = "0.1.0"

dependencies = [
    "python-dotenv==1.1.1",
    "pytest==8.4.2",
    "fastapi==0.119.0",
    "uvicorn==0.38.0",
    "apscheduler==3.11.0",
    "httpx==0.28.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
