[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-attention-manager"
version = "0.1.0"

dependencies = [
    "python-dotenv==1.1.1",
    "pytest==8.4.2",
    "fastapi==0.119.0",
    "uvicorn==0.38.0",
    "apscheduler==3.11.0",
    "httpx==0.28.1",
    "openai>=1.86.0,<2.0.0",
    "rich==14.2.0",
    "langchain==0.3.27",
    "langchain-openai==0.3.26",
    "pydantic==2.12.3",
    "scikit-learn>=1.7.2",
]

[project.scripts]
classification-generate = "personal_attention_manager.agents.classification.eval.generate:main"
classification-eval = "personal_attention_manager.agents.classification.eval.evaluate:main"
situation-generate = "personal_attention_manager.agents.situation.eval.generate:main"
situation-eval = "personal_attention_manager.agents.situation.eval.evaluate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
